--- a/.github/workflows/Deployment.yml
+++ b/.github/workflows/Deployment.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Grab Code
         uses: actions/checkout@v4
       - name: Install NodeJS
-        uses: actions/node-setup@v4
+        uses: actions/setup-node@v4
       - name: Install project dependencies
         run: npm ci
       - name: Test Project
