--- a/.github/workflows/Deployment.yml
+++ b/.github/workflows/Deployment.yml
@@ -1,7 +1,7 @@
 name: Deploy Project
 on: push
 jobs:
-  Lint:
+  Deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Grab Code
@@ -12,28 +12,8 @@ jobs:
         run: npm ci
       - name: Lint Code
         run: npm run lint
-  Test:
-    needs: Lint
-    runs-on: ubuntu-latest
-    steps:
-      - name: Grab Code
-        uses: actions/checkout@v4
-      - name: Install NodeJS
-        uses: actions/setup-node@v4
-      - name: Install project dependencies
-        run: npm ci
-      - name: Test Project
+      - name: Test Code
         run: npm run test
-  Deploy:
-    needs: Test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Grab Code
-        uses: actions/checkout@v4
-      - name: Install NodeJS
-        uses: actions/setup-node@v4
-      - name: Install project dependencies
-        run: npm ci
       - name: Build Project
         run: npm run build
       - name: Deploy Project
